tests/NormalTests/paczka1/small_fuzzy/22214803.err
Error in line 2: paPw9 A285 86,1
Error in line 3: paPw9 A847 43,0
